# prowl

./: Cargo.toml  README.md
.cargo/: config.toml
crates/prowl/: Cargo.toml
crates/prowl-codegen/: Cargo.toml
crates/prowl-codegen/src/: codegen.rs  error.rs  lib.rs
crates/prowl/src/: main.rs
examples/: arithmetic  arithmetic.sg  booleans.sg  factorial.sg  fibonacci.sg  floats.sg  gcd.sg  loops.sg
