[workspace]
members = [
    "crates/prowl",
    "crates/prowl-codegen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sagelang/prowl"

[workspace.dependencies]
sage-parser = "2.1.0"
sage-checker = "2.1.0"
inkwell = { version = "0.8.0", features = ["llvm20-1"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
