[package]
name = "prowl-codegen"
description = "LLVM codegen backend for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sage-parser.workspace = true
sage-checker.workspace = true
inkwell.workspace = true
thiserror.workspace = true
